move search results to styled components
and cleanup search logic and rendering of message results

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -85,7 +85,7 @@
   "sessionMessenger": "Session",
   "search": "Search",
   "noSearchResults": "No results found for \"$searchTerm$\"",
-  "conversationsHeader": "Conversations",
+  "conversationsHeader": "Contacts and Groups",
   "contactsHeader": "Contacts",
   "messagesHeader": "Messages",
   "settingsHeader": "Settings",
